Fixed tree jumping bug

--- a/src/app/tree/tree-view/tree-node/tree-node.component.scss
+++ b/src/app/tree/tree-view/tree-node/tree-node.component.scss
@@ -12,6 +12,7 @@
   border: 4px solid green;
   border-radius: 15px;
   background: set-background(green);
+  margin: 0 3px;
 
   &.visited {
     border: 4px dashed gray;
